# nansi

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: nansifile_linux.json
src/: lib.rs  main.rs
src/args/: args.rs
src/exec/: exec.rs  mod.rs
testdata/: nansifile_linux.json  nansifile_linux_duplicate_labels.json  nansifile_linux_prereq.json  variable.json
tests/: cli.rs
