[package]
name = "nansi"
version = "0.2.0"
edition = "2021"
authors = ["Andy <andy@andy.codes>"]
license = "GNU General Public License v3.0"
description = "Simple tool for task automation."
readme = "README.md"
homepage = "https://github.com/0x4ndy"
repository = "https://github.com/0x4ndy"
keywords = ["cli", "automation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.24.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
